--- a/README.rdoc
+++ b/README.rdoc
@@ -5,7 +5,7 @@ Syntactically Awesome Style Sheets + In + JavaScript => SASSIJS
 BREAK FREE FROM CSS!!!
 
 You can now use SASS instead of CSS in your web pages.  For a full description of SASS, see the documentation here:
-<a href="http://haml.hamptoncatlin.com/docs/rdoc/classes/Sass.html">http://haml.hamptoncatlin.com/docs/rdoc/classes/Sass.html</a> but ignore the installation instructions.
+http://haml.hamptoncatlin.com/docs/rdoc/classes/Sass.html but ignore the installation instructions.
 
 == Usage
 
